UCF-APR2.4/ftr main/force-app/main/default/objects/ShippingInformation__c/ShippingInformation__c.object-meta.xml
<CustomObject>
    <description>It will hold shipping addresses of the Quotes for the Ring Center Implementation</description>
    <label>Shipping Information</label>
    <nameField>
        <label>Shipping Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>