UCF-APR2.4/ftr main/force-app/main/default/objects/ShippingInformation__c/fields/Building_Number__c.field-meta.xml
<CustomField>
    <fullName>Building_Number__c</fullName>
    <label>Building Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>