UCF-APR2.4/ftr main/force-app/main/default/objects/ShippingInformation__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shipping Informations</relationshipLabel>
    <relationshipName>Shipping_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>