UCF-APR2.4/ftr main/force-app/main/default/objects/ShippingInformation__c/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <label>Contact Role</label>
    <length>30</length>
    <type>Text</type>
</CustomField>