UCF-APR2.4/ftr main/force-app/main/default/objects/ShippingInformation__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>55</length>
    <type>Text</type>
</CustomField>