UCF-APR2.4/ftr main/force-app/main/default/objects/ShippingInformation__c/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <label>Device</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>