UCF-APR2.4/ftr main/force-app/main/default/objects/ShippingInformation__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Shipping Informations</relationshipLabel>
    <relationshipName>Shipping_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>