UCF-APR2.4/ftr main/force-app/main/default/objects/ShippingInformation__c/fields/Room_Number__c.field-meta.xml
<CustomField>
    <fullName>Room_Number__c</fullName>
    <label>Room/Suite Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>