UCF-APR2.4/ftr main/force-app/main/default/objects/ShippingInformation__c/fields/Shipped_Devices__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Devices__c</fullName>
    <label>Shipped Devices</label>
    <summarizedField>Shipping_Device__c.Ship_Count__c</summarizedField>
    <summaryForeignKey>Shipping_Device__c.Shipping_Information__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>