UCF-APR2.4/ftr main/force-app/main/default/objects/ShippingInformation__c/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <formula>&quot;Standard&quot;</formula>
    <label>Shipping Method</label>
    <type>Text</type>
</CustomField>