UCF-APR2.4/ftr main/force-app/main/default/objects/ShippingInformation__c/fields/Site_Access_Hours__c.field-meta.xml
<CustomField>
    <fullName>Site_Access_Hours__c</fullName>
    <label>Site Access Hours</label>
    <length>15</length>
    <type>Text</type>
</CustomField>