UCF-APR2.4/ftr main/force-app/main/default/objects/ShippingInformation__c/fields/Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements__c</fullName>
    <label>Special Requirements</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>