UCF-APR2.4/ftr main/force-app/main/default/objects/ShippingInformation__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Street</label>
    <length>150</length>
    <type>Text</type>
</CustomField>