UCF-APR2.4/ftr main/force-app/main/default/objects/ShippingInformation__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Zip</label>
    <length>15</length>
    <type>Text</type>
</CustomField>